Desenvolvimento do método READ.

--- a/Proj_CRUD_ADONET/Projeto/Web.config
+++ b/Proj_CRUD_ADONET/Projeto/Web.config
@@ -10,6 +10,15 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
+  
+  <connectionStrings>
+    <add 
+      name ="ProjetoCRUD"
+      connectionString="Data Source=PCGLAUCIA\\SQLSERVER14;Initial Catalog=master;Integrated Security=True"
+      providerName="System.Data.SqlClient"
+    />
+  </connectionStrings>
+
   <system.web>
     <compilation debug="true" targetFramework="4.6"/>
     <httpRuntime targetFramework="4.6"/>
